--- a/projects.html
+++ b/projects.html
@@ -28,20 +28,47 @@
         <p class="title" style="font-size:30px; color:#206044;"><u><b>DAFTAR ISI</b></u></p>
         <div class="box" style="max-width: 500px;">
             <p>
-            1. <a href="#1">Equation Solver</a><br>
-            2. <a href="#2">Tahun 2020</a><br>
-            3. <a href="#3">Tahun 2021</a><br>
-            4. <a href="#4">Tahun 2022</a><br>
-            5. <a href="#5">Tahun 2023</a>
+            1. <a href="#1">Program Streamlit</a><br>
+            2. <a href="#2">Bangun Datar</a><br>
+            3. <a href="#3">Progress Bar</a><br>
+            4. <a href="#4">BMI Calculator</a><br>
+            5. <a href="#5">Bangun 3 Dimensi</a><br>
+            6. <a href="#6">[Coming Soon]</a><br>
             </p>
         </div>
         <br>
         <p class="title" style="font-size:30px; color:#206044;"><u><b>ISI HALAMAN</b></u></p>
-        <p class="title" id="1" style="font-size: 25px"><b>1. Sebelum 2020</b></p>
-        <p class="title" id="2" style="font-size: 25px"><b>2. Tahun 2020</b></p>
-        <p class="title" id="3" style="font-size: 25px"><b>3. Tahun 2021</b></p>
-        <p class="title" id="4" style="font-size: 25px"><b>4. Tahun 2022</b></p>
-        <p class="title" id="5" style="font-size: 25px"><b>5. Tahun 2023</b></p>
+        <p class="title" id="1" style="font-size: 25px"><b>1. Program Streamlit</b></p>
+        <div class="container2">
+            <p>Inilah beberapa program yang sudah dibuat di Streamlit<br>Berikut ini ada 8 program yang sudah pernah buat:</p>
+            <ul>
+                <li><a href="https://devandaniel9-equation-solver-4.streamlit.app/">Equation Solver</a> (New) - Version 1.4</li>
+                <li><a href="https://devandaniel9-number-type-detection.streamlit.app/">Number Type Detection</a> - Version 1.2</li>
+                <li><a href="https://devandaniel9-peluang.streamlit.app/">Program Peluang</a> - Version 1.1</li>
+                <li><a href="https://devandaniel9-geometry-3.streamlit.app/">Program Geometri</a> - Version 1.5</li>
+                <li><a href="https://devandaniel9-konversi-satuan-app-gk6u34.streamlit.app/">Konversi Satuan</a> - Version 1.1</li>
+                <li><a href="https://devandaniel9-kalkulator-dari-teks-kalkulator-dari-teks-3-7b3xf2.streamlit.app/">Kalkulator Dari Teks</a> - Version 1.0</li>
+                <li><a href="https://devandaniel9-equation-solver3.streamlit.app/">Equation Solver Old</a> - Sudah ada program yang lebih baru</li>
+                <li><a href="https://devandaniel9-shape-program-devan-7zwso4.streamlit.app/">Bangun Datar dan Bangun Ruang</a> - Sudah ada Program Geometri</li>
+            </ul>
+        </div>
+        <p class="title" id="2" style="font-size: 25px"><b>2. Bangun Datar</b></p>
+        <div class="container2">
+            <p>Ada program bangun datar, cuma bukan Streamlit</p>
+            <p><a href="projects/Bangun Datar 2.html">Bangun Datar</a> (versi HTML)</p>
+        </div>
+        <p class="title" id="3" style="font-size: 25px"><b>3. Progress Bar</b></p>
+        <div class="container2">
+            <p>Progress bar yang baru</p>
+            <a href="projects/Progress bar.html">Progress Bar HTML</a>
+        </div>
+        <p class="title" id="4" style="font-size: 25px"><b>4. BMI Calculator</b></p>
+        <div class="container2">
+            <p>Ada program bangun datar, cuma bukan Streamlit</p>
+            <a href="projects/BMI calculator.html">BMI Calculator</a>
+        </div>
+        <p class="title" id="5" style="font-size: 25px"><b>5. Bangun 3 Dimensi</b></p>
+        <p class="title" id="6" style="font-size: 25px"><b>6. [Coming Soon]</b></p>
         <br>
         <p class="title" style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
         <div class="box title">
@@ -63,7 +90,7 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 5 Okt 2023<br>
+        Terakhir diupdate: 13 Okt 2023<br>
         Copyright © 2023 by Devan
         </p>
     </footer>
