--- a/projects.html
+++ b/projects.html
@@ -55,12 +55,12 @@
         <p class="title" id="2" style="font-size: 25px"><b>2. Bangun Datar</b></p>
         <div class="container2">
             <p>Ada program bangun datar, cuma bukan Streamlit</p>
-            <p><a href="projects/Bangun Datar 2.html">Bangun Datar</a> (versi HTML)</p>
+            <p><a href="projects/Bangun Datar.html">Bangun Datar</a> (versi HTML)</p>
         </div>
         <p class="title" id="3" style="font-size: 25px"><b>3. Progress Bar</b></p>
         <div class="container2">
             <p>Progress bar yang baru</p>
-            <a href="projects/Progress bar.html">Progress Bar HTML</a>
+            <a href="projects/Progress Bar.html">Progress Bar HTML</a>
         </div>
         <p class="title" id="4" style="font-size: 25px"><b>4. BMI Calculator</b></p>
         <div class="container2">
@@ -68,21 +68,27 @@
             <a href="projects/BMI calculator.html">BMI Calculator</a>
         </div>
         <p class="title" id="5" style="font-size: 25px"><b>5. Bangun 3 Dimensi</b></p>
-        <p class="title" id="6" style="font-size: 25px"><b>6. [Coming Soon]</b></p>
-        <br>
+        <p class="title" id="6" style="font-size: 25px"><b>6. Labirin / Maze</b></p>
+        <p class="title" id="6" style="font-size: 25px"><b>7. Input dalam Matematika</b></p>
+        <p class="title" id="6" style="font-size: 25px"><b>6. Labirin / Maze</b></p>
+
+        <p style="text-align:center"><b>#--#--#--#--#--#--#--# &nbsp;&nbsp; <u>UNDER CONSTRUCTION</u> &nbsp;&nbsp; #--#--#--#--#--#--#--#</b></p>
+
         <p class="title" style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
         <div class="box title">
-            <p>
-            Link halaman:<br>
-            <a href="index.html">Home</a> |
-            <a href="blog.html">Blog</a> |
-            <a href="fakta.html">Fakta</a> |
-            <a href="profil.html">Profil</a> |
-            <a href="portofolio.html">Portofolio</a> |
-            <a href="hasil-karya.html">Hasil Karya</a> |
-            <b>Timeline</b> |
-            <a href="updates.html">Updates</a>
-            </p>
+            <p style="font-size:22px; margin-bottom:5px;"><b>Link halaman:</b></p>
+            <div class="btn-group">
+                <a href="index.html">Home</a>
+                <a href="blog.html">Blog</a>
+                <a href="fakta.html">Fakta</a>
+                <a href="profil.html">Profil</a>
+                <a href="portofolio.html">Portofolio</a>
+                <a href="hasil-karya.html">Hasil Karya</a>
+                <a href="timeline.html">Timeline</a>
+                <a href="updates.html">Updates</a>
+                <a class="selected">Projects</a>
+            </div>
+            <div class="clearfix"></div><br>
         </div>
         <br>
         <a class="button title" href="#home">Kembali ke awal</a>
@@ -90,7 +96,7 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 13 Okt 2023<br>
+        Terakhir diupdate: 5 Nov 2023<br>
         Copyright © 2023 by Devan
         </p>
     </footer>
