--- a/projects.html
+++ b/projects.html
@@ -32,8 +32,8 @@
             2. <a href="#2">Bangun Datar</a><br>
             3. <a href="#3">Progress Bar</a><br>
             4. <a href="#4">BMI Calculator</a><br>
-            5. <a href="#5">Bangun 3 Dimensi</a><br>
-            6. <a href="#6">[Coming Soon]</a><br>
+            5. <a href="#5">Soal Pertanyaan</a><br>
+            6. <a href="#6">Bangun 3 Dimensi</a><br>
             </p>
         </div>
         <br>
@@ -67,10 +67,14 @@
             <p>Ada program bangun datar, cuma bukan Streamlit</p>
             <a href="projects/BMI calculator.html">BMI Calculator</a>
         </div>
-        <p class="title" id="5" style="font-size: 25px"><b>5. Bangun 3 Dimensi</b></p>
-        <p class="title" id="6" style="font-size: 25px"><b>6. Labirin / Maze</b></p>
-        <p class="title" id="6" style="font-size: 25px"><b>7. Input dalam Matematika</b></p>
-        <p class="title" id="6" style="font-size: 25px"><b>6. Labirin / Maze</b></p>
+        <p class="title" id="5" style="font-size: 25px"><b>5. Soal Pertanyaan</b></p>
+        <div class="container2">
+            <p>Soal Pertanyaan dalam Matematika</p>
+            <a href="projects/Soal Pertanyaan.html">Soal Pertanyaan</a>
+        </div>
+        <p class="title" id="6" style="font-size: 25px"><b>6. Bangun 3 Dimensi</b></p>
+        <p class="title" id="7" style="font-size: 25px"><b>7. Labirin / Maze</b></p>
+        <p class="title" id="8" style="font-size: 25px"><b>8. Input dalam Matematika</b></p>
 
         <p style="text-align:center"><b>#--#--#--#--#--#--#--# &nbsp;&nbsp; <u>UNDER CONSTRUCTION</u> &nbsp;&nbsp; #--#--#--#--#--#--#--#</b></p>
 
@@ -96,7 +100,7 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 5 Nov 2023<br>
+        Terakhir diupdate: 17 Nov 2023<br>
         Copyright © 2023 by Devan
         </p>
     </footer>
