--- a/projects/Soal Pertanyaan.html
+++ b/projects/Soal Pertanyaan.html
@@ -2,11 +2,14 @@
 <html>
 <head>
     <title>Sebuah Permainan - Website Devan</title>
+    <!-- <link rel="stylesheet" href="fonts/"> -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 </head>
 <style>
     body {
         background-color: #a0c0e0;
-        font-family:"Helvetica",sans-serif;
+        /* font-family:"Helvetica",sans-serif; */
+        font-family:"Lato",sans-serif;
     }
     .column {
         float: left;
@@ -18,7 +21,9 @@
         clear: both;
     }
     button {
-        font-family:"Helvetica",sans-serif;
+        /* font-family:"Helvetica",sans-serif; */
+        /* src: url(https://dwl.freefontsfamily.com/download/Helvetica-Font); */
+        font-family:"Lato",sans-serif;
         font-size: 20px;
     }
     .button {
@@ -53,19 +58,41 @@
     }
 </style>
 <body>
-    <h1>Soal Pertanyaan</h1>
+    <h1>Soal Matematika</h1>
     <p>
     Soal Pertanyaan ini akan menjawab beberapa soal matematika, yaitu penjumlahan.<br>
     Program ini bisa membuat soal baru dengan angka yang berbeda dengan tombolnya, lalu klik selesaikan.
     <br><br>
     </p>
 
+    <h2>Mode pertanyaan</h2>
+    <!-- <label for="bentuk">Pilih jenis pertanyaan matematika:</label><br>
+    <select name="bentuk" id="bentuk" style="width:150px"> -->
+    <label>Pilih jenis pertanyaan matematika:</label><br>
+    <select id="bentuk" style="width:150px">
+        <option>Penjumlahan</option>
+        <option>Pengurangan</option>
+        <option>Perkalian</option>
+        <option>Pembagian</option>
+        <option>Penjumlahan dan Pengurangan</option>
+        <option>Campuran</option>
+    </select>
+    <br><br>
+
+    <label>Pilih tingkat kesulitan:</label><br>
+    <select id="level" style="width:150px">
+        <option>Mudah</option>
+        <option>Sedang</option>
+        <option>Sulit</option>
+    </select>
+
     <h2>Pertanyaan</h2>
     <!-- <p id="soal">Hasil dari 2 + 3 adalah ...</p> -->
+    <!-- <p>Pilih pertanyaan</p> -->
     <p id="soal">Belum ada soal</p>
     <button class="button" onclick="buat()">Buat soal baru</button>
     <p>Input angka</p>
-    <input type="number" id="angka" min="0" value="0">
+    <input type="number" id="angka" min="0">
     <br><br>
     <button class="button" onclick="selesaikan()">Selesaikan</button>
 
@@ -76,23 +103,101 @@
     <a class="button2" href="../projects.html">Kembali ke menu projects</a>
 
     <br><br>
-    <p>Terakhir diupdate: 17 Nov 2023</p>
+    <p>Terakhir diupdate: 22 Nov 2023</p>
 
     <script>
         function buat() {
+            var e = document.getElementById("bentuk");
+            var e1 = e.options[e.selectedIndex];
+            var level = document.getElementById("level");
+            var level2 = level.options[level.selectedIndex];
+            var tanda = '';
             document.getElementById('jawaban').innerHTML = 'Belum ada jawaban';
-            document.getElementById('angka').innerHTML = '100';
-            a = Math.floor(1 + 9 * Math.random())
-            b = Math.floor(1 + 9 * Math.random())
-            document.getElementById('soal').innerHTML = 'Hasil dari ' + a + ' + ' + b + ' adalah ...';
+            // document.getElementById('angka').innerHTML = '';
+            if (e1.index == 0) {
+                if (level2.index == 0) {
+                    a = Math.floor(1 + 10 * Math.random());
+                    b = Math.floor(1 + 10 * Math.random());
+                } else if (level2.index == 1) {
+                    a = Math.floor(10 + 90 * Math.random());
+                    b = Math.floor(10 + 90 * Math.random());
+                } else {
+                    a = Math.floor(100 + 900 * Math.random());
+                    b = Math.floor(100 + 900 * Math.random());
+                }
+                tanda = ' + '
+            } else if (e1.index == 1) {
+                if (level2.index == 0) {
+                    kecil = Math.floor(1 + 10 * Math.random());
+                    a = Math.floor(1 + 10 * Math.random()) + kecil - 1;
+                    b = kecil;
+                } else if (level2.index == 1) {
+                    kecil = Math.floor(10 + 40 * Math.random());
+                    a = Math.floor(10 + 40 * Math.random()) + kecil;
+                    b = kecil;
+                } else {
+                    kecil = Math.floor(100 + 400 * Math.random());
+                    a = Math.floor(100 + 400 * Math.random()) + kecil;
+                    b = kecil;
+                }
+                tanda = ' - '
+            } else if (e1.index == 2) {
+                if (level2.index == 0) {
+                    a = Math.floor(1 + 10 * Math.random());
+                    b = Math.floor(1 + 10 * Math.random());
+                } else if (level2.index == 1) {
+                    if (Math.random() < 0.5) {
+                        a = Math.floor(10 + 20 * Math.random());
+                        b = Math.floor(3 + 17 * Math.random());
+                    } else {
+                        a = Math.floor(3 + 17 * Math.random());
+                        b = Math.floor(10 + 20 * Math.random());
+                    }
+                } else {
+                    if (Math.random() < 0.5) {
+                        a = Math.floor(50 + 250 * Math.random());
+                        b = Math.floor(10 + 40 * Math.random());
+                    } else {
+                        a = Math.floor(10 + 40 * Math.random());
+                        b = Math.floor(50 + 250 * Math.random());
+                    }
+                }
+                tanda = ' x '
+            } else if (e1.index == 3) {
+                kecil = Math.floor(1 + 10 * Math.random());
+                a = Math.floor(1 + 10 * Math.random()) * kecil;
+                b = kecil;
+                tanda = ' / '
+            }
+            document.getElementById('soal').innerHTML = 'Hasil dari ' + a + tanda + b + ' adalah ...';
         }
         function selesaikan() {
-            var angka = parseInt(document.getElementById('angka').value);
-            hasil = a+b
-            if (angka == hasil) {
-                document.getElementById('jawaban').innerHTML = 'Jawabannya benar<br><br>' + a + ' + ' + b + ' = ' + hasil;
+            var angka_awal = document.getElementById('angka').value
+            if (angka_awal != '') {
+                var e = document.getElementById("bentuk");
+                var e1 = e.options[e.selectedIndex];
+                var tanda = '';
+                angka = parseInt(angka_awal);
+                if (e1.index == 0) {
+                    hasil = a+b;
+                    tanda = ' + ';
+                } else if (e1.index == 1) {
+                    hasil = a-b;
+                    tanda = ' - ';
+                } else if (e1.index == 2) {
+                    hasil = a*b;
+                    tanda = ' x ';
+                } else if (e1.index == 3) {
+                    hasil = Math.floor(a/b);
+                    tanda = ' / ';
+                }
+                if (angka == hasil) {
+                    document.getElementById('jawaban').innerHTML = 'Jawabannya benar<br><br>' + a + tanda + b + ' = ' + hasil;
+                } else {
+                    document.getElementById('jawaban').innerHTML = 'Jawabannya salah<br>Jawaban yang diinput: ' + angka + '<br><br>' + a + tanda + b + ' = ' + hasil;
+                }
             } else {
-                document.getElementById('jawaban').innerHTML = 'Jawabannya salah<br>Jawaban yang diinput: ' + angka + '<br><br>' + a + ' + ' + b + ' = ' + hasil;
+                document.getElementById('jawaban').innerHTML = 'Input angka harus diisi';
             }
         }
     </script>
