Update and rename Penghitung Waktu.html to projects/Penghitung Waktu.html

--- a/projects/Penghitung Waktu.html
+++ b/projects/Penghitung Waktu.html
@@ -71,6 +71,12 @@
     <h1 id="angka6" style="font-size:40px; text-align:center;">Loading...</h1>
     <!-- <button class="button" onclick="buat()">Buat soal baru</button> -->
 
+    <br><br>
+    <a class="button2" href="../projects.html">Kembali ke menu projects</a>
+
+    <br><br>
+    <p>Terakhir diupdate: 1 Des 2023</p>
+
     <script>
         function buat() {
             // const now = new Date();
