--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
             3. <a href="#3">Progress Bar</a><br>
             4. <a href="#4">BMI Calculator</a><br>
             5. <a href="#5">Soal Pertanyaan</a><br>
-            6. <a href="#6">Bangun 3 Dimensi</a><br>
+            6. <a href="#6">Penghitung Waktu</a><br>
             </p>
         </div>
         <br>
@@ -70,11 +70,15 @@
         <p class="title" id="5" style="font-size: 25px"><b>5. Soal Pertanyaan</b></p>
         <div class="container2">
             <p>Soal Pertanyaan dalam Matematika</p>
-            <a href="projects/Soal Pertanyaan.html">Soal Pertanyaan</a>
+            <a href="projects/Soal Matematika.html">Soal Pertanyaan</a>
         </div>
-        <p class="title" id="6" style="font-size: 25px"><b>6. Bangun 3 Dimensi</b></p>
-        <p class="title" id="7" style="font-size: 25px"><b>7. Labirin / Maze</b></p>
-        <p class="title" id="8" style="font-size: 25px"><b>8. Input dalam Matematika</b></p>
+        <p class="title" id="6" style="font-size: 25px"><b>6. Penghitung Waktu</b></p>
+        <div class="container2">
+            <p>Penghitung Waktu</p>
+            <a href="projects/Penghitung Waktu.html">Penghitung Waktu</a>
+        </div>
+        <p class="title" id="7" style="font-size: 25px"><b>7. Bangun 3 Dimensi</b></p>
+        <p class="title" id="8" style="font-size: 25px"><b>8. Labirin / Maze</b></p>
 
         <p style="text-align:center"><b>#--#--#--#--#--#--#--# &nbsp;&nbsp; <u>UNDER CONSTRUCTION</u> &nbsp;&nbsp; #--#--#--#--#--#--#--#</b></p>
 
@@ -100,7 +104,7 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 17 Nov 2023<br>
+        Terakhir diupdate: 1 Des 2023<br>
         Copyright © 2023 by Devan
         </p>
     </footer>
