--- a/projects.html
+++ b/projects.html
@@ -40,6 +40,9 @@
         <p class="title" style="font-size:30px; color:#206044;"><u><b>ISI HALAMAN</b></u></p>
         <p class="title" id="1" style="font-size: 25px"><b>1. Program Streamlit</b></p>
         <div class="container2">
+            <!-- <div class="image"> -->
+            <img src="images/streamlit-logo.png" width="150">
+            <div class="clearfix"></div>
             <p>Inilah beberapa program yang sudah dibuat di Streamlit<br>Berikut ini ada 8 program yang sudah pernah buat:</p>
             <ul>
                 <li><a href="https://devandaniel9-equation-solver-4.streamlit.app/">Equation Solver</a> (New) - Version 1.4</li>
@@ -51,26 +54,30 @@
                 <li><a href="https://devandaniel9-equation-solver3.streamlit.app/">Equation Solver Old</a> - Sudah ada program yang lebih baru</li>
                 <li><a href="https://devandaniel9-shape-program-devan-7zwso4.streamlit.app/">Bangun Datar dan Bangun Ruang</a> - Sudah ada Program Geometri</li>
             </ul>
-        </div>
+        </div><br>
         <p class="title" id="2" style="font-size: 25px"><b>2. Bangun Datar</b></p>
         <div class="container2">
+            <img src="images/2d-shapes.png" width="250">
+            <div class="clearfix"></div>
             <p>Ada program bangun datar, cuma bukan Streamlit</p>
             <p><a href="projects/Bangun Datar.html">Bangun Datar</a> (versi HTML)</p>
-        </div>
+        </div><br>
         <p class="title" id="3" style="font-size: 25px"><b>3. Progress Bar</b></p>
         <div class="container2">
             <p>Progress bar yang baru</p>
             <a href="projects/Progress Bar.html">Progress Bar HTML</a>
-        </div>
+        </div><br>
         <p class="title" id="4" style="font-size: 25px"><b>4. BMI Calculator</b></p>
         <div class="container2">
+            <img src="images/bmi-image.jpg" width="150">
+            <div class="clearfix"></div>
             <p>Ada program bangun datar, cuma bukan Streamlit</p>
             <a href="projects/BMI calculator.html">BMI Calculator</a>
-        </div>
-        <p class="title" id="5" style="font-size: 25px"><b>5. Soal Pertanyaan</b></p>
+        </div><br>
+        <p class="title" id="5" style="font-size: 25px"><b>5. Soal Matematika</b></p>
         <div class="container2">
             <p>Soal Pertanyaan dalam Matematika</p>
-            <a href="projects/Soal Matematika.html">Soal Pertanyaan</a>
+            <a href="projects/Soal Matematika.html">Soal Matematika</a>
         </div>
         <p class="title" id="6" style="font-size: 25px"><b>6. Penghitung Waktu</b></p>
         <div class="container2">
@@ -104,7 +111,7 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 1 Des 2023<br>
+        Terakhir diupdate: 3 Des 2023<br>
         Copyright © 2023 by Devan
         </p>
     </footer>
