--- a/hasil-karya.html
+++ b/hasil-karya.html
@@ -2,8 +2,83 @@
 <html>
 <head>
     <title>Website Devan</title>
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Halaman ini belum dibuat</p>
+    <div class="top-container title">
+        <div class="dropdown" style="margin-right:20px; float:left;">
+            <!-- <button class="dropbtn">MENU</button> -->
+            <button class="dropbtn" style="background-color:transparent; font-size:0;"><img src="images/menu-icon.jpg" width="30"></button>
+            <div class="dropdown-content" id="boxlink"></div>
+            <script src="script.js"></script>
+        </div>
+        <img src="images/blank-profile.jpg" width="40" style="border-radius: 50%; vertical-align:middle; margin-right:20px; float:left;">
+        <!-- <font size="6" color="white"><b>SEBUAH WEBSITE</b></font> -->
+        <div style="font-size:30px; color:white;"><b>SEBUAH WEBSITE</b></div>
+        <div class="clearfix"></div>
+    </div>
+	<div class="container">
+        <br>
+        <div class="title" id="home" style="font-size:50px; color:#146480;"><b>Projects</b></div>
+        <p>
+        Timeline dan Sejarah berisi kejadian timeline yang sudah terjadi, baik dalam hal sekolah maupun perjalanan.
+        </p>
+        <p class="title" style="font-size:30px; color:#206044;"><u><b>DAFTAR ISI</b></u></p>
+        <div class="box" style="max-width: 500px;">
+            <p>
+            1. <a href="#1">Program Streamlit</a><br>
+            2. <a href="#2">Dream Board</a><br>
+            3. <a href="#3">Coming Soon</a><br>
+            </p>
+        </div>
+        <br>
+        <p class="title" style="font-size:30px; color:#206044;"><u><b>ISI HALAMAN</b></u></p>
+        <p class="title" id="1" style="font-size: 25px"><b>1. Google Form</b></p>
+        <div class="container2">
+            <!-- <div class="image"> -->
+            <p>Inilah beberapa program yang sudah dibuat di Streamlit<br>Berikut ini ada 8 program yang sudah pernah buat:</p>
+            <ul>
+                <li><a href="https://docs.google.com/forms/d/1TYLPl871KmzQhd0X6kO_xlqiosELJifWl6R7xTDWvaE/">Kuis dan Pertanyaan Astronomi</a> - Belum sepenuhnya selesai</li>
+                <li>Refleksi Liburan</li>
+            </ul>
+        </div><br>
+        <p class="title" id="2" style="font-size: 25px"><b>2. Dream Board</b></p>
+        <div class="container2">
+            <img src="images/Dream Board - Devan Daniel.jpeg" width="250">
+            <div class="clearfix"></div>
+            <p>Inilah Dream Board saya</p>
+        </div><br>
+        <p class="title" id="3" style="font-size: 25px"><b>3. Coming Soon</b></p>
+
+        <p style="text-align:center"><b>#--#--#--#--#--#--#--# &nbsp;&nbsp; <u>UNDER CONSTRUCTION</u> &nbsp;&nbsp; #--#--#--#--#--#--#--#</b></p>
+
+        <p class="title" style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
+        <div class="box title">
+            <p style="font-size:22px; margin-bottom:5px;"><b>Link halaman:</b></p>
+            <div class="btn-group">
+                <a href="index.html">Home</a>
+                <a href="blog.html">Blog</a>
+                <a href="fakta.html">Fakta</a>
+                <a href="profil.html">Profil</a>
+                <a href="portofolio.html">Portofolio</a>
+                <a class="selected">Hasil Karya</a>
+                <a href="timeline.html">Timeline</a>
+                <a href="updates.html">Updates</a>
+				<a href="projects.html">Projects</a>
+            </div>
+            <div class="clearfix"></div><br>
+        </div>
+        <br>
+        <a class="button title" href="#home">Kembali ke awal</a>
+        <br><br>
+    </div>
+    <footer style="background-color:#404040; padding:10px; color:white;">
+        <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
+        Terakhir diupdate: 7 Jan 2024<br>
+        Copyright © 2024 by Devan
+        </p>
+    </footer>
 </body>
 </html>
