--- a/hasil-karya.html
+++ b/hasil-karya.html
@@ -21,7 +21,7 @@
     </div>
 	<div class="container">
         <br>
-        <div class="title" id="home" style="font-size:50px; color:#146480;"><b>Projects</b></div>
+        <div class="title" id="home" style="font-size:50px; color:#146480;"><b>Hasil Karya</b></div>
         <p>
         Timeline dan Sejarah berisi kejadian timeline yang sudah terjadi, baik dalam hal sekolah maupun perjalanan.
         </p>
