--- a/hasil-karya.html
+++ b/hasil-karya.html
@@ -23,14 +23,17 @@
         <br>
         <div class="title" id="home" style="font-size:50px; color:#146480;"><b>Hasil Karya</b></div>
         <p>
-        Timeline dan Sejarah berisi kejadian timeline yang sudah terjadi, baik dalam hal sekolah maupun perjalanan.
+        Hasil Karya berisi karya yang sudah dibuat selama ini, seperti koding dan menggambar.
         </p>
         <p class="title" style="font-size:30px; color:#206044;"><u><b>DAFTAR ISI</b></u></p>
         <div class="box" style="max-width: 500px;">
             <p>
-            1. <a href="#1">Program Streamlit</a><br>
-            2. <a href="#2">Dream Board</a><br>
-            3. <a href="#3">Coming Soon</a><br>
+            1. <a href="#1">Google Form</a><br>
+            2. <a href="#2">Canva</a><br>
+            3. <a href="#3">Dream Board</a><br>
+            4. <a href="#4">Batik dan Menggambar</a><br>
+            5. <a href="#5">Tugas Sekolah SMP</a><br>
+            6. <a href="#6">Tugas Sekolah SMA</a><br>
             </p>
         </div>
         <br>
@@ -44,13 +47,21 @@
                 <li>Refleksi Liburan</li>
             </ul>
         </div><br>
-        <p class="title" id="2" style="font-size: 25px"><b>2. Dream Board</b></p>
+        <p class="title" id="2" style="font-size: 25px"><b>2. Canva</b></p>
+        <div class="container2">
+            <p>Inilah beberapa program yang sudah dibuat di Streamlit<br>Berikut ini ada 8 program yang sudah pernah buat:</p>
+            <ul>
+                <li><a href="https://www.canva.com/design/DAF0n98aNrE/2Ywu2IQ0lNZ5a3dW5GGuvQ/edit">Entrepreneur Term 2</a> - Tugas Sekolah</li>
+                <li><a href="https://www.canva.com/design/DAFwFtdQ0Ko/CZakrbjnuprD6d988TQL8Q/edit">Entrepreneur Term 1</a> - Tugas Sekolah</li>
+                <li>Coming Soon</li>
+            </ul>
+        </div><br>
+        <p class="title" id="3" style="font-size: 25px"><b>3. Dream Board</b></p>
         <div class="container2">
             <img src="images/Dream Board - Devan Daniel.jpeg" width="250">
             <div class="clearfix"></div>
             <p>Inilah Dream Board saya</p>
         </div><br>
-        <p class="title" id="3" style="font-size: 25px"><b>3. Coming Soon</b></p>
 
         <p style="text-align:center"><b>#--#--#--#--#--#--#--# &nbsp;&nbsp; <u>UNDER CONSTRUCTION</u> &nbsp;&nbsp; #--#--#--#--#--#--#--#</b></p>
 
@@ -76,7 +87,7 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 7 Jan 2024<br>
+        Terakhir diupdate: 8 Jan 2024<br>
         Copyright © 2024 by Devan
         </p>
     </footer>
