--- a/hasil-karya.html
+++ b/hasil-karya.html
@@ -28,27 +28,21 @@
         <p class="title" style="font-size:30px; color:#206044;"><u><b>DAFTAR ISI</b></u></p>
         <div class="box" style="max-width: 500px;">
             <p>
-            1. <a href="#1">Google Form</a><br>
-            2. <a href="#2">Canva</a><br>
-            3. <a href="#3">Dream Board</a><br>
-            4. <a href="#4">Batik dan Menggambar</a><br>
-            5. <a href="#5">Tugas Sekolah SMP</a><br>
-            6. <a href="#6">Tugas Sekolah SMA</a><br>
+            1. <a href="#1">Canva</a><br>
+            2. <a href="#2">Google Form</a><br>
+            3. <a href="#3">Kumpulan Website</a><br>
+            4. <a href="#4">Hasil Karya Kelas 7</a><br>
+            5. <a href="#5">Hasil Karya Kelas 8</a><br>
+            6. <a href="#6">Hasil Karya Kelas 9</a><br>
+			7. <a href="#7">Hasil Karya Kelas 10</a><br>
             </p>
         </div>
         <br>
         <p class="title" style="font-size:30px; color:#206044;"><u><b>ISI HALAMAN</b></u></p>
-        <p class="title" id="1" style="font-size: 25px"><b>1. Google Form</b></p>
+		<p class="title" id="1" style="font-size: 25px"><b>1. Canva</b></p>
         <div class="container2">
-            <!-- <div class="image"> -->
-            <p>Inilah beberapa program yang sudah dibuat di Streamlit<br>Berikut ini ada 8 program yang sudah pernah buat:</p>
-            <ul>
-                <li><a href="https://docs.google.com/forms/d/1TYLPl871KmzQhd0X6kO_xlqiosELJifWl6R7xTDWvaE/">Kuis dan Pertanyaan Astronomi</a> - Belum sepenuhnya selesai</li>
-                <li>Refleksi Liburan</li>
-            </ul>
-        </div><br>
-        <p class="title" id="2" style="font-size: 25px"><b>2. Canva</b></p>
-        <div class="container2">
+			<img src="images/canva-icon.png" width="100">
+            <div class="clearfix"></div>
             <p>Inilah beberapa program yang sudah dibuat di Streamlit<br>Berikut ini ada 8 program yang sudah pernah buat:</p>
             <ul>
                 <li><a href="https://www.canva.com/design/DAF0n98aNrE/2Ywu2IQ0lNZ5a3dW5GGuvQ/edit">Entrepreneur Term 2</a> - Tugas Sekolah</li>
@@ -56,12 +50,67 @@
                 <li>Coming Soon</li>
             </ul>
         </div><br>
-        <p class="title" id="3" style="font-size: 25px"><b>3. Dream Board</b></p>
+		
+        <p class="title" id="2" style="font-size: 25px"><b>2. Google Form</b></p>
         <div class="container2">
-            <img src="images/Dream Board - Devan Daniel.jpeg" width="250">
-            <div class="clearfix"></div>
-            <p>Inilah Dream Board saya</p>
+            <img src="images/google-form-icon.png" width="100">
+			<div class="clearfix"></div>
+            <p>Inilah beberapa program yang sudah dibuat di Streamlit<br>Berikut ini ada 8 program yang sudah pernah buat:</p>
+            <ul>
+                <li><a href="https://docs.google.com/forms/d/1TYLPl871KmzQhd0X6kO_xlqiosELJifWl6R7xTDWvaE/">Kuis dan Pertanyaan Astronomi</a> - Belum sepenuhnya selesai</li>
+                <li>Refleksi Liburan</li>
+            </ul>
         </div><br>
+		
+		<p class="title" id="3" style="font-size: 25px"><b>3. Kumpulan Website</b></p>
+		<div class="container2">
+			<p>Inilah beberapa website yang sudah pernah dibuat sebelumnya:</p>
+            <ul>
+                <li><a href="Kumpulan Website/Tugas Eagle School/Latihan1.html">Latihan 1</a> - Website Pertama - Dibuat: Januari 2021</li>
+                <li><a href="Kumpulan Website/Tugas Eagle School/Tugas 1.html">Perumpamaan Domba Yang Hilang</a> - Dibuat: Januari 2021</li>
+                <li><a href="Kumpulan Website/Tugas Eagle School/tugas2/index.html">Profil Siswa</a> - Dibuat: Februari 2021</li>
+				<li><a href="Kumpulan Website/Tugas Eagle School/Latihan2.html">Latihan 2</a> - Dibuat: Februari 2021</li>
+				<li><a href="Kumpulan Website/Tugas Eagle School/tugas table.html">Tugas Tabel</a> - Dibuat: Februari 2021</li>
+				<li><a href="Kumpulan Website/Tugas Eagle School/Tugas membuat form.html">Tugas Membuat Form</a> - Dibuat: Maret 2021</li>
+            </ul>
+		</div><br>
+		
+        <p class="title" id="4" style="font-size: 25px"><b>4. Hasil Karya Kelas 7</b></p>
+        <table class="container2">
+            <tr>
+                <th style="width:200px;">Nama Karya</th>
+                <th>Gambar</th>
+                <th style="width:600px;">Deskripsi</th>
+            </tr>
+            <tr>
+                <td>Dream Board</td>
+                <td style="text-align:center;"><img src="Gambar Karya/Dream Board - Devan Daniel.jpeg" width="250"></td>
+                <td>Dream Board adalah hal yang diinginkan pada masa depan nanti. Gambar ini merupakan hasil karya kelas 7 Carmel.<br><br>Dibuat: Juli 2020</td>
+            </tr>
+            <tr>
+                <td>Gambar Pancasila</td>
+                <td style="text-align:center;"><img src="Gambar Karya/Gambar Pancasila.jpeg" width="250"></td>
+                <td>Dibuat: Agustus 2020</td>
+            </tr>
+            <tr>
+                <td>Challenge Batik</td>
+                <td style="text-align:center;"><img src="Gambar Karya/Batik Challenge Devan Daniel 7 Carmel.jpeg" width="250"></td>
+                <td>Dibuat: September 2020</td>
+            </tr>
+            <tr>
+                <td>Tugas Challenge Mind Map</td>
+                <td>
+					<img src="Gambar Karya/Tugas Challenge Week 3 - Mind Map - 1 - Devan 7 Carmel.jpeg" width="250">
+					<img src="Gambar Karya/Tugas Challenge Week 3 - Mind Map - 2 - Devan 7 Carmel.jpeg" width="250">
+				</td>
+                <td>Mind map ini ada 2 gambar. Gambar yang pertama tentang profil, sedangkan yang kedua tentang bangun 3 dimensi.<br><br>Dibuat: Januari 2021</td>
+            </tr>
+        </table>
+        <br>
+		
+		<p class="title" id="5" style="font-size: 25px"><b>5. Hasil Karya Kelas 8</b></p>
+		<p class="title" id="6" style="font-size: 25px"><b>6. Hasil Karya Kelas 9</b></p>
+		<p class="title" id="7" style="font-size: 25px"><b>7. Hasil Karya Kelas 10</b></p>
 
         <p style="text-align:center"><b>#--#--#--#--#--#--#--# &nbsp;&nbsp; <u>UNDER CONSTRUCTION</u> &nbsp;&nbsp; #--#--#--#--#--#--#--#</b></p>
 
@@ -87,7 +136,7 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 8 Jan 2024<br>
+        Terakhir diupdate: 9 Jan 2024<br>
         Copyright © 2024 by Devan
         </p>
     </footer>
