--- a/index.html
+++ b/index.html
@@ -39,11 +39,13 @@
         Selanjutnya, Devan sedang mencoba untuk membuat program HTML, agar lebih mudah dan lengkap.<br>
         Begitu juga program Geometri, Devan mencoba tanpa memakai streamlit.<br>
         <br>
-        Selain itu, ada 2 program yang saat ini Devan ingin kembangkan yaitu:<br>
+        Selain itu, ada <b>2 program</b> yang saat ini Devan ingin kembangkan yaitu:<br>
         - Program Equation Solver versi 5<br>
         - Program Geometri versi 1.6<br>
         <br>
         Dan juga sedang mengembangkan halaman timeline dan updates.
+        <br><br>
+        Di halaman Hasil Karya sudah menambahkan <b>Canva</b>, <b>Google Form</b>, <b>Kumpulan Website</b>, dan <b>Hasil Karya Kelas 7</b>, sehingga versinya berubah menjadi v1.7.3.
         </p>
         <p class="title" style="font-size:25px; color:#000080;">
             <b>Link program:</b>&nbsp;
@@ -77,9 +79,9 @@
             </li>
             <li style="color:darkgreen">Fakta dan Informasi (HTML) - Sedang dibuat</li>
             <li style="color:darkgreen">Timeline dan Sejarah (HTML) - Sedang dibuat</li>
-            <li style="color:darkgreen">Foto dan Kenangan (HTML) - Sedang dibuat</li>
-            <li>Gambar (HTML) - <span style="color:maroon">v1.7.2</span></li>
-            <li>Pelajaran (HTML & Python) - <span style="color:maroon">v1.7.3</span></li>
+            <li style="color:#808000">Foto dan Kenangan (HTML) - Mau dibuat</li>
+            <li style="color:darkgreen">Gambar (HTML) - Sedang dibuat</li>
+            <li>Pelajaran (HTML & Python) - <span style="color:maroon">v1.7.4</span></li>
             <li>Bangun 3 Dimensi (Python)</li>
             <li>Labirin / Maze (HTML & Python) - <span style="color:maroon">v1.8</span></li>
             <li>Explore (HTML & Python)</li>
@@ -164,7 +166,7 @@
                 <th style="width:400px;">Informasi Halaman</th>
             </tr>
             <tr>
-                <td>Pertanyaan - <span style="color:maroon">v1.7.3</span></td>
+                <td>Pertanyaan - <span style="color:maroon">v1.7.4</span></td>
                 <td>Berisi pertanyaan dan Q&A yang menarik dan berhubungan dengan website ini.</td>
             </tr>
             <tr>
@@ -213,8 +215,8 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 5 Okt 2023<br>
-        Version: 1.7.2<br>
+        Terakhir diupdate: 10 Jan 2024<br>
+        Version: 1.7.3<br>
         Copyright © 2023 by Devan
         </p>
     </footer>
