--- a/hasil-karya.html
+++ b/hasil-karya.html
@@ -43,11 +43,35 @@
         <div class="container2">
 			<img src="images/canva-icon.png" width="100">
             <div class="clearfix"></div>
-            <p>Inilah beberapa program yang sudah dibuat di Streamlit<br>Berikut ini ada 8 program yang sudah pernah buat:</p>
+            <p>Inilah beberapa project canva yang sudah dibuat di Canva<br>Berikut ini ada beberapa presentasi yang sudah pernah buat:</p>
             <ul>
-                <li><a href="https://www.canva.com/design/DAF0n98aNrE/2Ywu2IQ0lNZ5a3dW5GGuvQ/edit">Entrepreneur Term 2</a> - Tugas Sekolah</li>
-                <li><a href="https://www.canva.com/design/DAFwFtdQ0Ko/CZakrbjnuprD6d988TQL8Q/edit">Entrepreneur Term 1</a> - Tugas Sekolah</li>
-                <li>Coming Soon</li>
+                <div class="column" style="padding-right: 100px;">
+                    <li>
+                        <!-- <a href="https://www.canva.com/design/DAF0n98aNrE/2Ywu2IQ0lNZ5a3dW5GGuvQ/edit">Entrepreneur Term 2</a><br> -->
+                        <a href="https://www.canva.com/design/DAF0n98aNrE/2Ywu2IQ0lNZ5a3dW5GGuvQ/view">Entrepreneur Term 2</a><br>
+                        Tugas Sekolah Kelas 10<br>
+                        Dibuat: November 2023
+                    </li><br>
+                    <li>
+                        <a href="https://www.canva.com/design/DAFwXlWF5Ko/qLFstaN2wWiQQCl179B3KQ/view">Laporan Hidroponik Tanaman Kangkung</a><br>
+                        Dibuat: Oktober 2023
+                    </li><br>
+                    <li>
+                        <a href="https://www.canva.com/design/DAFwFtdQ0Ko/CZakrbjnuprD6d988TQL8Q/view">Entrepreneur Term 1</a><br>
+                        Dibuat: September 2023
+                    </li><br>
+                </div>
+                <div class="column">
+                    <li>
+                        <a href="https://www.canva.com/design/DAFTTOc-ulA/u2hnjpYUx-o8QH9b0yHNlw/view">Observasi Bandeng Juwana Elrina</a><br>
+                        Dibuat: November 2022
+                    </li><br>
+                    <li>
+                        <a href="https://www.canva.com/design/DAFIDBYDpJw/u54kaC39SdO2cQgt5LWrnQ/view">Produk Chokies</a><br>
+                        Dibuat: Agustus 2022
+                    </li><br>
+                </div>
+                <div class="clearfix"></div>
             </ul>
         </div><br>
 		
@@ -55,7 +79,7 @@
         <div class="container2">
             <img src="images/google-form-icon.png" width="100">
 			<div class="clearfix"></div>
-            <p>Inilah beberapa program yang sudah dibuat di Streamlit<br>Berikut ini ada 8 program yang sudah pernah buat:</p>
+            <p>Google Form adalah website untuk mengisi form yang terdiri dari kuis, pilihan ganda, dan paragraf.<br>Berikut ini ada beberapa google form yang sudah pernah buat:</p>
             <ul>
                 <li><a href="https://docs.google.com/forms/d/1TYLPl871KmzQhd0X6kO_xlqiosELJifWl6R7xTDWvaE/">Kuis dan Pertanyaan Astronomi</a> - Belum sepenuhnya selesai</li>
                 <li>Refleksi Liburan</li>
@@ -136,7 +160,7 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 9 Jan 2024<br>
+        Terakhir diupdate: 10 Jan 2024<br>
         Copyright © 2024 by Devan
         </p>
     </footer>
