--- a/projects.html
+++ b/projects.html
@@ -71,7 +71,7 @@
         <div class="container2">
             <img src="images/bmi-image.jpg" width="150">
             <div class="clearfix"></div>
-            <p>Ada program bangun datar, cuma bukan Streamlit</p>
+            <p>Ada program untuk menghitung BMI tubuh, berdasarkan berat dan tinggi badan.</p>
             <a href="projects/BMI calculator.html">BMI Calculator</a>
         </div><br>
         <p class="title" id="5" style="font-size: 25px"><b>5. Soal Matematika</b></p>
@@ -111,7 +111,7 @@
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 3 Des 2023<br>
+        Terakhir diupdate: 15 Jan 2024<br>
         Copyright © 2023 by Devan
         </p>
     </footer>
